--- a/templates/home.html
+++ b/templates/home.html
@@ -6,7 +6,7 @@
 
 <h1>{{survey.title}}</h1>
 
-<form action="/questions/0">
+<form action="/start_survey" method="POST">
     <p>{{survey.instructions}}</p>
     <button>Start</button>
 </form>
